--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hydrapp</title>
+    <link rel="manifest" href="manifest.json">
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body class="bg-blue-950">
