--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hydrapp</title>
     <link rel="manifest" href="manifest.json">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
-<body class="bg-blue-950 w-full flex min-h-screen justify-center items-center">
+<body class="bg-gradient-to-b from-myDarkBlue to-myLightBlue w-full flex flex-col min-h-screen justify-center items-center">
     <main class="w-full max-w-xl flex flex-col justify-center items-center gap-7">
-        <h1 class="text-6xl font-bold text-blue-50 text-center">
+        <h1 class="text-6xl font-itim font-bold text-blue-50 text-center drop-shadow-lg">
             hydrapp
         </h1>
-        <secction class="bg-[url('./water-glass.svg')] bg-center bg-no-repeat w-full h-96 flex justify-center items-center">
-            <!-- <img class="max-w-xl" src="./water-glass.svg" alt="water glass"> -->
-            <p class="counter--js text-8xl font-bold">0</p>
+        <p class="text-white text-xs font-indie drop-shadow-md">by Mateusz Wróbel</p>
+        <secction class="bg-[url('./water-glass.svg')] bg-center bg-no-repeat w-full h-96 flex justify-center items-center drop-shadow-lg">
+            <p class="counter--js text-9xl font-bold font-indie text-blue-950">0</p>
         </secction>
         <section class="flex flex-col gap-2 justify-center items-center text-white">
-            <button class="add--js w-56 h-12 bg-white text-black font-bold rounded-sm touch-manipulation">dodaj szklankę</button>
-            <button class="remove--js w-56 h-12 text-red-700 font-bold touch-manipulation">usuń szklankę</button>
+            <button class="add--js w-56 h-12 bg-white text-blue-950 text-lg font-bold rounded-md touch-manipulation drop-shadow-md">dodaj szklankę</button>
+            <button class="remove--js bg-red-800 w-56 h-12 rounded-md text-white text-lg font-bold touch-manipulation drop-shadow-md">usuń szklankę</button>
         </section>
     </main>
+
 
     <script type="module" src="./main.js"></script>
 </body>
