--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="simple app allowing you to track your daily hydration">
     <title>Hydrapp</title>
+    <meta property="og:title" content="Hydrapp" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://main--boisterous-beignet-3da65f.netlify.app/" />
+    <meta property="og:image" content="./og-image.png" />
+    <meta property="description" content="simple app allowing you to track your daily hydration">
     <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
